# Seesh-Nuker

./: LICENSE  README.md  install.bat  main.py  pyproject.toml  requirements.txt
data/: proxies.txt
