[tool.poetry]
name = "Seesh-Nuker"
version = "1.1.0"
description = ""
authors = ["priyanshujhawar <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
discord = "^1.7.0"
discord.py = "^1.7.3"
pypresence = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"